--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Photography</span>
 
 <div class="col-6 menu">
 <div id="menu_icon">
-<img src="img/menu.svg">
+<img src="img/menu.svg" id="menu_img">
 </div>
 </div>
 
