--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 Photography</span>
 </div>
 
+
+<span>Pre-wedding</span>
+<span>Portrait</span>
+<span>Travel</span>
+<span>Life</span>
+
 <div class="col-6 menu">
 <div id="menu_icon">
 <img src="img/menu.svg" id="menu_img">
