--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<li>Pre-wedding</li>
 		<li>Portrait</li>
 		<li>Travel</li>
+		<li>Life</li>
 		<li>Me</li>
+
 	</ul>
 </nav>
 
@@ -31,11 +33,12 @@
 Photography</span>
 </div>
 
-
+<!--
 <span>Pre-wedding</span>
 <span>Portrait</span>
 <span>Travel</span>
 <span>Life</span>
+-->
 
 <div class="col-6 menu">
 <div id="menu_icon">
