--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ Photography</span>
 
 <div class="col-6 menu">
 <div id="menu_icon">
-<img src="img/menu.svg" id="menu_img">
+  <span></span>
+  <span></span>
+  <span></span>
 </div>
 </div>
 
