--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <header>
 
-<div class="col-6 title">
+<div class="col-3 title">
 <span class="name">
 <b>Yao WEI</b>
 <br>
@@ -33,14 +33,13 @@
 Photography</span>
 </div>
 
-<!--
-<span>Pre-wedding</span>
-<span>Portrait</span>
-<span>Travel</span>
-<span>Life</span>
--->
 
-<div class="col-6 menu">
+<div class="col-3">
+<button>book!</button>
+</div>
+
+
+<div class="col-3 menu">
 <div id="menu_icon">
   <span></span>
   <span></span>
