--- a/index.html
+++ b/index.html
@@ -26,16 +26,12 @@
 <header>
 
 <div class="col-3 title">
-<span class="name">
-<b>Yao WEI</b>
-<br>
-<br>
-Photography</span>
+<img src="img/girl_head.svg">
 </div>
 
 
 <div class="col-3">
-<button>book!</button>
+<button class="btn btn-default"">book!</button>
 </div>
 
 
