--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <header>
 
-<div class="col-3 title">
-<img src="img/girl_head.svg">
+<div class="col-3">
+<img class="girl_img" src="img/girl_head.svg">
 </div>
 
 
