--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
 <header>
 
-<div class="col-3">
+<div class="col-3 col-girl">
 <img class="girl_img" src="img/girl_head.svg">
 </div>
 
 
-<div class="col-3">
+<div class="col-3 col-btn">
 <button class="btn btn-default"">book!</button>
 </div>
 
