--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 <div class="col-3 col-btn">
-<button class="btn btn-default"">Book Now!</button>
+<button class="btn btn-default"">Book Now</button>
 </div>
 
 
