--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
  
 </head>
-<body>
+<body ontouchstart="">
 
 <nav id="drawer">
 	<ul>
