--- a/index.html
+++ b/index.html
@@ -45,7 +45,18 @@
 
 </header>
 
-<img class="banner" src="img/banner.jpg" alt="banner" width="100%" height="auto">
+
+<div id="intro" class="col-12">
+<b>Yao Wei</b>
+<br>
+Photography
+<img class="camera_img" src="img/camera.svg">
+
+</div>
+
+<div id="banner" class="col-12">
+<img src="img/banner.jpg" alt="banner" width="100%" height="auto">
+</div>
 
 </main>
 
