--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <b>Yao Wei</b>
 <br>
 Photography
-<img class="camera_img" src="img/camera.svg">
+<img id="camera_img" src="img/camera.svg" alt="intro">
 
 </div>
 
