--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 
 </header>
 
-<!--
+
 <div id="intro" class="col-12">
-<b>Yao Wei</b>
+<b>Tingyu Li </b>
 <br>
-Photography
+Interaction Designer
 <img id="camera_img" src="img/camera.svg" alt="intro">
 
 </div>
--->
+
 
 <div id="banner" class="col-12">
 <img src="img/banner.jpg" alt="banner" width="100%" height="auto">
