--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 </header>
 
-
+<!--
 <div id="intro" class="col-12">
 <b>Tingyu Li </b>
 <br>
@@ -53,11 +53,17 @@ Interaction Designer
 <img id="camera_img" src="img/camera.svg" alt="intro">
 
 </div>
-
+-->
 
 <div id="banner" class="col-12">
 <img src="img/banner.jpg" alt="banner" width="100%" height="auto">
 </div>
+
+
+
+<p>I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
+</p>
+
 
 </main>
 
