--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
 
 <div id="intro" class="col-12">
-<b>Tingyu Li </b>
+<b>Yao Wei </b>
 <br>
-Interaction Designer
+Photography
 <img id="camera_img" src="img/camera.svg" alt="intro">
 
 </div>
