--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
 
 
 <div id="banner" class="col-12">
-<img src="img/banner.jpg" alt="banner" width="100%" height="auto">
+<img src="img/banner.jpg" id="banner_img" alt="banner" width="100%" height="auto">
+<p id="banner_text1">Yao Wei</p>
+<p id="banner_text1">-Photography-</p>
 </div>
 
-
+<!--
 <div id="intro" class="col-12">
 <b>Yao Wei </b>
 <br>
@@ -62,7 +64,7 @@ Photography
 
 </div>
 
-
+-->
 
 
 
