--- a/index.html
+++ b/index.html
@@ -47,15 +47,11 @@
 
 
 
-
-
 <div id="banner" class="col-12">
-<!--<img src="img/banner.jpg" id="banner_img" alt="banner" >-->
-<p id="banner_text1">Yao Wei</p>
-<p id="banner_text2">-Photography-</p>
+<img src="img/banner.jpg" id="banner_img" alt="banner" >
 </div>
 
-
+<!--
 <div id="intro" class="col-12">
 begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
 I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
@@ -65,7 +61,7 @@ I’m an interaction designer with background in Journalism and Digital Arts see
 
 </div>
 
-
+-->
 
 
 
