--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 
 <header>
 
-<div class="col-3 col-girl">
+<div class=" col-girl">
 <img class="girl_img" src="img/girl_head.svg">
 </div>
 
 
-<div class="col-3 col-btn">
+<div class=" col-btn">
 <button class="btn btn-default"">Book Now</button>
 </div>
 
 
-<div class="col-3 menu">
+<div class=" menu">
 <div id="menu_icon">
   <span></span>
   <span></span>
