--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0; user-scalable=no">
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no">
   <title>Yao WEI Photography</title>
   <link href="css/css.css" rel="stylesheet" type="text/css">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
