--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <nav id="drawer">
 	<ul>
-		<li>Pre-wedding</li>
-		<li>Portrait</li>
-		<li>Travel</li>
-		<li>Life</li>
-		<li>Me</li>
+		<li><div>Pre-wedding</div></li>
+		<li><div>Portrait</div></li>
+		<li><div>Travel</div></li>
+		<li><div>Life</div></li>
+		<li><div>Me</div></li>
 
 	</ul>
 </nav>
