--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 <div class=" col-btn">
-<button class="btn btn-default"">Book Now</button>
+<button class="btn btn-default""><span>Book Now<span></button>
 </div>
 
 
