--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 </header>
 
-
+<content>
 
 <div id="banner" class="col-12">
 <img src="img/banner.jpg" id="banner_img" alt="banner" >
@@ -70,7 +70,7 @@ I’m an interaction designer with background in Journalism and Digital Arts see
 
 
 
-
+</content>
 </main>
 
 
