--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   <link href="css/css.css" rel="stylesheet" type="text/css">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
- 
+
  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
+<script 
+ src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+
+ <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
 </head>
 <body ontouchstart="">
 
