--- a/index.html
+++ b/index.html
@@ -56,6 +56,25 @@
 <div id="content">
 
 <div id="banner" class="col-12">
+<div id="banner-header">
+<div class=" col-girl">
+<img class="girl_img" src="img/girl_head.svg">
+</div>
+
+
+<div class=" col-btn">
+<button class="btn btn-default""><span>Book Now<span></button>
+</div>
+
+
+<div class=" menu">
+<div id="menu_icon">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
+
+<div>
 <img src="img/banner.jpg" id="banner_img" alt="banner" >
 </div>
 
