--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
 
 <div id="content">
 
-<div id="banner" class="col-12">
+<div>
+
 <div id="banner-header">
+
 <div class=" col-girl">
 <img class="girl_img" src="img/girl_head.svg">
 </div>
@@ -73,8 +75,10 @@
   <span></span>
   <span></span>
 </div>
+<div>
 
 <div>
+
 <img src="img/banner.jpg" id="banner_img" alt="banner" >
 </div>
 
