--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <div id="content">
 
-<div>
+<div id="banner-outbox">
 
 <div id="banner-header">
 
@@ -70,7 +70,7 @@
 
 
 <div class=" menu">
-<div id="menu_icon">
+<div class="menu_icon">
   <span></span>
   <span></span>
   <span></span>
