--- a/index.html
+++ b/index.html
@@ -53,48 +53,51 @@
 
 </header>
 
+
+
+
 <div id="content">
 
-<div id="banner-outbox">
+    <div id="banner">
 
-<div id="banner-header">
+      <div id="banner-header">
 
-<div class=" col-girl">
-<img class="girl_img" src="img/girl_head.svg">
-</div>
-
-
-<div class=" col-btn">
-<button class="btn btn-default""><span>Book Now<span></button>
-</div>
+        <div class=" col-girl">
+        <img class="girl_img" src="img/girl_head.svg">
+        </div>
 
 
-<div class=" menu">
-<div class="menu_icon">
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
-<div>
-
-<div>
-
-<img src="img/banner.jpg" id="banner_img" alt="banner" >
-</div>
+        <div class=" col-btn">
+        <button class="btn btn-default""><span>Book Now<span></button>
+        </div>
 
 
+        <div class=" menu">
+        <div class="menu_icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        </div>
 
-<div id="intro" class="col-12">
-begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-</div>
+      </div>
+
+      <img src="img/banner.jpg" id="banner_img" alt="banner" >
+    </div>
+
+
+
+    <div id="intro" class="col-12">
+    begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
+    I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
+    I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
+    begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
+    I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
+    I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
+    begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
+    I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
+    I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
+    </div>
 
 
 
