--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 </div>
 
 
-<div class=" col-btn">
-<button class="btn btn-default""><span>Book Now<span></button>
+<div >
+<button class="btn btn-default banner-btn"><span>Book Now<span></button>
 </div>
 
 
@@ -67,8 +67,8 @@
         </div>
 
 
-        <div class=" col-btn">
-        <button class="btn btn-default""><span>Book Now<span></button>
+        <div>
+        <button class="btn btn-default btn-banner"><span>Book Now<span></button>
         </div>
 
 
