--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
 <nav id="drawer">
 	<ul>
-		<li><div>Pre-wedding</div></li>
-		<li><div>Portrait</div></li>
-		<li><div>Travel</div></li>
-		<li><div>Life</div></li>
-		<li><div>Me</div></li>
+		<li><div>PRE-WEDDING</div></li>
+		<li><div>PORTRAIT</div></li>
+		<li><div>TRAVEL</div></li>
+		<li><div>LIFE</div></li>
+		<li><div>ME</div></li>
 
 	</ul>
 </nav>
@@ -58,7 +58,7 @@
 <div id="banner" class="col-12">
     <img src="img/isabella-gray.jpg" id="banner_img" alt="banner" >
     
-    <div id="gray">
+    <div id="img-gray-layer">
     </div>
     
     <div id="banner-textbox">
@@ -90,6 +90,10 @@ I’m an interaction designer with background in Journalism and Digital Arts see
 
 
 </div>
+
+<div id="main-gray-layer"><div>
+
+
 </main>
 
 
