--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 <div class=" col-btn">
-<button class="btn btn-default""><span>Book Now<span></button>
+<!--<button class="btn btn-default""><span>Book Now<span></button>-->
 </div>
 
 
