--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
-<body ontouchstart="" style="overflow: hidden;">
+<body ontouchstart="">
 
 <nav id="drawer">
 	<ul>
