--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 <div id="content">
 
 <div id="banner" class="col-12">
-    <img src="img/isabella-gray.jpg" id="banner_img" alt="banner" >
+    <img src="img/isabella-gray-narrow.jpg" id="banner_img" alt="banner" >
     
-    <div id="img-gray-layer">
-    </div>
+    <!--<div id="img-gray-layer">
+    </div>-->
     
     <div id="banner-textbox">
       <div id="banner-text">
