--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 <div id="content">
 
 <div id="banner" class="col-12">
-    <img src="img/isabella-gray-narrow.jpg" id="banner_img" alt="banner" >
-    
+    <img src="img/isabella-gray.jpg" id="banner_img" alt="banner" >
+    <img src="img/isabella-gray-narrow.jpg" id="banner_img-narrow" alt="banner" >
     <!--<div id="img-gray-layer">
     </div>-->
     
     <div id="banner-textbox">
       <div id="banner-text">
-      <h3>WEI YAO PHOTOGRAPHY</h3>
+      <h3>「 WEI YAO PHOTOGRAPHY 」</h3>
       <h6>CAPTURE MOMENTS</h6>
       </div>
     </div>
