--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     
     <div id="banner-textbox">
       <div id="banner-text">
-      <h3>「 WEI YAO PHOTOGRAPHY 」</h3>
-      <h6>CAPTURE MOMENTS</h6>
+      <h3>「 WEI YAO Photography 」</h3>
+      <h6>Capture Moments</h6>
       </div>
     </div>
         
