--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div id="content">
 
 <div id="banner" class="col-12">
-    <img src="img/isabella-gray.jpg" id="banner_img" alt="banner" >
+    <img src="img/isabella-gray-narrow.jpg" id="banner_img" alt="banner" >
    
     <!--<div id="img-gray-layer">
     </div>-->
