--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 <div id="content">
 
 <div id="banner" class="col-12">
-    <img src="img/isabella-gray-narrow.jpg" id="banner_img" alt="banner" >
-   
+    <img src="img/isabella-gray-narrow.jpg" id="banner_img"  >
+
     <!--<div id="img-gray-layer">
     </div>-->
     
