--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 <div id="banner" class="col-12">
     <picture>
       <source 
-      src="(min-device-width: 1200)and(-webkit-min-device-pixel-ratio: 2)"
+      src="(min-device-width: 1200)"
       srcset="img/isabella-gray-narrow.jpg"
       />
       <source 
-      src="(max-device-width: 480)and(-webkit-min-device-pixel-ratio: 2)and (orientation: portrait)"
+      src="(max-device-width: 480)"
       srcset="img/isabella-gray.jpg"
       />
 
