--- a/index.html
+++ b/index.html
@@ -58,13 +58,11 @@
 <div id="banner" class="col-12">
     <picture>
       <source 
-      src="(min-device-width: 1200)"
-      srcset="img/isabella-gray-narrow.jpg"
-      />
-      <source 
-      src="(max-device-width: 480)"
-      srcset="img/isabella-gray.jpg"
-      />
+    media="(min-width: 1200px)" 
+    srcset="img/isabella-gray-narrow.jpg 2x">
+  <source 
+    media="(max-width: 480px)" 
+    srcset="img/isabella-gray.jpg 2x">
 
     </picture>
 
