--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     <picture>
       <source 
     media="(min-width: 1200px)" 
-    srcset="img/isabella-gray-narrow.jpg 2x">
+    srcset="img/isabella-gray-narrow.jpg">
   <source 
     media="(max-width: 480px)" 
-    srcset="img/isabella-gray.jpg 2x">
+    srcset="img/isabella-gray.jpg">
 
     </picture>
 
