--- a/index.html
+++ b/index.html
@@ -57,18 +57,10 @@
 <div id="content">
 
 <div id="banner" class="col-12">
-    <picture>
-      <source 
-    media="(min-width: 1200px)" 
-    srcset="img/isabella-gray-narrow.jpg">
-  <source 
-    media="(max-width: 480px)" 
-    srcset="img/isabella-gray.jpg">
-
-    </picture>
+    
 
     <!--default img incase some browser cannot support picture-->
-    <!--<img src="img/isabella-gray.jpg" id="banner_img">-->
+    <img src="img/isabella-gray.jpg" id="banner_img">
 
     
     <div id="banner-textbox">
