--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
 </div>
 </div>
 
+
+<div class="h-menu">
+   <ul>
+    <li class="horizontal"><div>PRE-WEDDING</div></li>
+    <li class="horizontal"><div>PORTRAIT</div></li>
+    <li class="horizontal"><div>TRAVEL</div></li>
+    <li class="horizontal"><div>LIFE</div></li>
+    <li class="horizontal"><div>ME</div></li>
+  </ul>
+</div>
+
+
+
 </header>
 
 <div id="content">
