--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
 <div class="h-menu">
    <ul>
-    <li class="horizontal"><div>PRE-WEDDING</div></li>
-    <li class="horizontal"><div>PORTRAIT</div></li>
-    <li class="horizontal"><div>TRAVEL</div></li>
-    <li class="horizontal"><div>LIFE</div></li>
-    <li class="horizontal"><div>ME</div></li>
+    <li class="horizontal"><div>Pre-wedding</div></li>
+    <li class="horizontal"><div>Portrait</div></li>
+    <li class="horizontal"><div>Travel</div></li>
+    <li class="horizontal"><div>Life</div></li>
+    <li class="horizontal"><div>Me</div></li>
   </ul>
 </div>
 
