--- a/index.html
+++ b/index.html
@@ -85,7 +85,13 @@
         
    
 </div>
-
+<div id="latest">
+  <div id="latest-text">
+    <img id="camera" src="img/camera.svg">
+    <h4>Latest Memories</h4>
+    <h6>to remember in lifetime</h6>
+  </div>
+</div>
 
 
 <div id="intro" class="col-12">
