--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
    
 </div>
 <div id="latest">
-  <div id="latest-text">
+  <div id="latest-textbox">
     <img id="camera" src="img/camera.svg">
     <h4>Latest Memories</h4>
     <h6>to remember in lifetime</h6>
