--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
 <div id="latest">
   <div id="latest-textbox">
     <img id="camera" src="img/camera.svg">
-    <h4>Latest Memories</h4>
-    <h6>to remember in lifetime</h6>
+    <h4>Latest Release</h4>
+    <p>Updated works below. 
+    <br>
+    Catch precious memories to be remembered in all of your lifetime.
+    </p>
   </div>
 </div>
 
