--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
 <nav id="drawer">
 	<ul>
-		<li><div>PRE-WEDDING</div></li>
-		<li><div>PORTRAIT</div></li>
-		<li><div>TRAVEL</div></li>
-		<li><div>LIFE</div></li>
-		<li><div>ME</div></li>
+		<li><div>Pre-wedding</div></li>
+		<li><div>Portrait</div></li>
+		<li><div>Travel</div></li>
+		<li><div>Life</div></li>
+		<li><div>Me</div></li>
 
 	</ul>
 </nav>
