--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     
     <div id="banner-textbox">
       <div id="banner-text">
-      <h3>「 WEI YAO Photography 」</h3>
+      <h3>WEI YAO <span class="normal">Photography<span></h3>
       <h6>Capture Moments</h6>
       </div>
     </div>
