--- a/index.html
+++ b/index.html
@@ -86,14 +86,19 @@
    
 </div>
 <div id="latest">
-  <div id="latest-textbox">
+
+  <div id="camera-logo">
     <img id="camera" src="img/camera.svg">
+  </div>
+    
+  <div id="latest-textbox">
     <h4>Latest Release</h4>
     <p>Updated works below. 
     <br>
     Catch precious memories to be remembered in all of your lifetime.
     </p>
-  </div>
+</div>
+
 </div>
 
 
