--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </div>
 <div id="latest">
 
-  <div id="camera-logo">
+  <div id="camera-box">
     <img id="camera" src="img/camera.svg">
   </div>
     
