--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
     <h4>Latest Release</h4>
     <p>Updated works below. 
     <br>
-    Catch precious memories to be remembered in all of your lifetime.
+    Catch precious memories to be remembered
+    <br>
+    in all of your lifetime.
     </p>
 </div>
 
