--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     
   <div id="latest-textbox">
     <h4>Latest Release</h4>
-    <p>Updated works below. 
+    <p class="latest-intro">Updated works below. 
     <br>
     Catch precious memories to be remembered
     <br>
