--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         
    
 </div>
+<div id="below-banner">
 <div id="latest">
 
   <div id="camera-box">
@@ -99,7 +100,7 @@
     <br>
     in all of your lifetime.
     </p>
-</div>
+  </div>
 
 </div>
 
@@ -165,6 +166,7 @@ I’m an interaction designer with background in Journalism and Digital Arts see
 
 
 
+</div>
 </div>
 
 <div id="main-gray-layer"><div>
