--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css'>
+<link rel='stylesheet prefetch' href='http://darsa.in/sly/css/ospb.css'>
+
+
+
+
+
 </head>
 <body ontouchstart="">
 
@@ -107,7 +114,7 @@
 </div>
 
 
-
+<!--
 
  <div class="frame" id="basic">
     <ul class="clearfix">
@@ -122,7 +129,7 @@
       <li>8</li>   
     </ul>
   </div>
-
+-->
 
 
 
@@ -204,7 +211,9 @@ I’m an interaction designer with background in Journalism and Digital Arts see
 </html>
 <script src="js/js.js"></script>
 <script src="js/horizontal-scroll.js"></script>
-
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='http://darsa.in/sly/examples/js/vendor/plugins.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/Sly/1.6.1/sly.min.js'></script>
 
 
 
