--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Yao WEI Photography</title>
-  <link href="css/css.css" rel="stylesheet" type="text/css">
+  
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
@@ -18,10 +18,10 @@
  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 
-    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css'>
-<link rel='stylesheet prefetch' href='http://darsa.in/sly/css/ospb.css'>
+<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css'>
+<link rel='stylesheet prefetch' href='https://darsa.in/sly/css/ospb.css'>
 
-
+<link href="css/css.css" rel="stylesheet" type="text/css">
 
 
 
@@ -208,13 +208,13 @@ I’m an interaction designer with background in Journalism and Digital Arts see
 </body>
 </html>
 <script src="js/js.js"></script>
-<script src="js/horizontal-scroll.js"></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='http://darsa.in/sly/examples/js/vendor/plugins.js'></script>
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://darsa.in/sly/examples/js/vendor/plugins.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/Sly/1.6.1/sly.min.js'></script>
 
 
-
+<script src="js/horizontal-scroll.js"></script>
 
 
 
