--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="css/css.css" rel="stylesheet" type="text/css">
 
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <!--<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>-->
+  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
 
 <script 
