--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <link href="css/css.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="css/ospball.css" rel="stylesheet" type="text/css">
   <link href="css/ospb.css" rel="stylesheet" type="text/css">
-
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
