--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8">
    
-    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css'>
    
 
    <link rel="stylesheet" href="css/css.css">
@@ -202,7 +201,7 @@ I’m an interaction designer with background in Journalism and Digital Arts see
  
 </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/Sly/1.6.1/sly.min.js'></script>
-
+    <script src="js/js.js"></script>
     <script src="js/index.js"></script>
 
     <script src="js/plugins.js"></script>
