--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-   
-   
-
+   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/ospb.css">
@@ -194,6 +192,14 @@ I’m an interaction designer with background in Journalism and Digital Arts see
 
 
 </body>
+
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+<script 
+ src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js">
+ </script>
+
 
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'>
