--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8">
 
-
-
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="css/style.css">
@@ -13,6 +11,9 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ospb.css">
 
   </head>
 <body ontouchstart="">
@@ -145,39 +146,6 @@ I’m an interaction designer with background in Journalism and Digital Arts see
 testI’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
 I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
 I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-testI’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-testI’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-testI’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-begin!!!I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
-I’m an interaction designer with background in Journalism and Digital Arts seeking for future opportunity in interaction design. I’m passionate in human interaction, medias interaction and encoding people’s needs with empathy into meaningful and valuable design. I believe in the design that could bring happiness to daily life and made people smile. 
 </div>
 
 
@@ -203,12 +171,12 @@ I’m an interaction designer with background in Journalism and Digital Arts see
 
 
   <script src="js/js.js"></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/Sly/1.6.1/sly.min.js'>
-  </script>
+ <!--  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> -->
+ <!--  <script src='https://cdnjs.cloudflare.com/ajax/libs/Sly/1.6.1/sly.min.js'>
+  </script> -->
   <script src="js/index.js"></script>
   <script src="js/plugins.js"></script>
-    
+  <script src="js/sly.min.js"></script>
     
  
 </html>
