--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<!DOCTYPE html>
-<html >
-  <head>
-    <meta charset="UTF-8">
+<!doctype html>
+<html lang="en">
+<head>
 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Yao WEI Photography</title>
+
+  
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="css/style.css">
