--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/css.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ospb.css">
+<!--     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ospb.css"> -->
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
