--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 
   <div class="frame" id="basic">
     <ul class="clearfix">
-      <li>0</li>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
+      <li><div id="release0"></div></li>
+      <li><div id="release1"></div></li>
+      <li><div id="release2"></div></li>
+      <li><div id="release3"></div></li>
+      <li><div id="release4"></div></li>
       <li>5</li>
       <li>6</li>
       <li>7</li>
