--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
       <li><div id="release2"></div></li>
       <li><div id="release3"></div></li>
       <li><div id="release4"></div></li>
+      <li><div id="release5"></div></li>
+      <li><div id="release6"></div></li>
+      <li><div id="release7"></div></li>
+      <li><div id="release8"></div></li>
       <li>5</li>
       <li>6</li>
       <li>7</li>
