--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@
   <h4>Gallary</h4>
 </div>
 
+<div class="row gallery-container">
+  <div class="col-12 gallery">
+    <div class="gallery-image" id="pre-wedding-img"></div>
+    <div class="gallery-text">Pre-wedding</div>
+  </div>
+  <div class="col-12 gallery"></div>
+  <div class="col-12 gallery"></div>
+  <div class="col-12 gallery"></div>
+</div>
+
 
 
 <div id="intro" class="col-12">
