--- a/index.html
+++ b/index.html
@@ -132,8 +132,11 @@
 
 
   <div class="col-12 gallery">
-    <div class="gallery-image" id="pre-wedding-img"></div>
-    <div class="gallery-text">Pre-wedding</div>
+    <div class="gallery-image" id="pre-wedding-img">
+    </div>
+    <div>
+    <p class="gallery-text">Pre-wedding</p>
+    </div>
   </div>
 
 </div>
