--- a/index.html
+++ b/index.html
@@ -131,11 +131,14 @@
 <div class="row gallery-container">
 
 
-  <div class="col-12 gallery">
-    <div class="gallery-image" id="pre-wedding-img">
+  <div class="col-12 gallery" style="border: 3px solid blue;">
+    <div style="border: 3px solid red; height: 90%; background:url(../img/pre-wedding.jpg);
+  background-size:cover;
+  background-repeat:no-repeat;">
+    <!-- <div class="gallery-image" id="pre-wedding-img"> -->
     </div>
-    <div>
-    <p class="gallery-text">Pre-wedding</p>
+    <div style="border: 3px solid green; height: 10%;">
+    <!-- <p class="gallery-text">Pre-wedding</p> -->
     </div>
   </div>
 
