--- a/index.html
+++ b/index.html
@@ -131,14 +131,12 @@
 <div class="row gallery-container">
 
 
-  <div class="col-12 gallery" style="border: 3px solid blue;">
-    <div style="border: 3px solid red; height: 90%; background:url(../img/pre-wedding.jpg);
-  background-size:cover;
-  background-repeat:no-repeat;">
-    <!-- <div class="gallery-image" id="pre-wedding-img"> -->
+  <div class="col-12 gallery">
+    <div class="gallery-image" id="pre-wedding-img">
+      
     </div>
-    <div style="border: 3px solid green; height: 10%;">
-    <!-- <p class="gallery-text">Pre-wedding</p> -->
+    <div>
+    <p class="gallery-text">Pre-wedding</p>
     </div>
   </div>
 
