--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   </div>
 
 
-  <div class="col-12 gallery">
+  <div class="col-12 gallery gallery-right">
     <div class="gallery-image" id="portrait-img">
       
     </div>
@@ -161,7 +161,7 @@
   </div>
 
 
-  <div class="col-12 gallery">
+  <div class="col-12 gallery gallery-right">
     <div class="gallery-image" id="life-img">
       
     </div>
