--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </ul>
   </div>
 
-<div id="gallary-title" class="col-12">
+<div id="gallary-title gallary-title-mac" class="col-12">
   <h4>Gallary</h4>
 </div>
 
