--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </ul>
   </div>
 
-<div id="gallary-title" class="col-12 gallary-title-mac">
+<div id="gallary-title" class="col-12 gallary-title-iphone">
   <h4>Gallary</h4>
 </div>
 
