--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     </ul>
   </div>
 
-<div id="gallary-title" class="col-12 gallary-title-iphone">
-  <h4>Gallary</h4>
+<div class="col-12">
+  <h4 class="gallary-title">Gallary</h4>
 </div>
 
 <div class="row gallery-container">
