--- a/index.html
+++ b/index.html
@@ -142,17 +142,17 @@
 
  <div id="latest">
 
-    <div id="camera-box">
+   <!--  <div id="camera-box">
       <img id="camera" src="img/camera.svg">
-    </div>
+    </div> -->
       
     <div id="latest-textbox">
       <h4>Latest Release</h4>
       <p class="latest-intro">Updated works below. 
       <br>
-      Catch precious memories to be remembered
+      <!-- Catch precious memories to be remembered
       <br>
-      in all of your lifetime.
+      in all of your lifetime. -->
       </p>
     </div>
 
