--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     
     <div id="banner-textbox">
       <div id="banner-text">
-      <h3>YAO WEI <span class="light">Photography<span></h3>
+      <h3 class="myname">YAO WEI <span class="light">Photography<span></h3>
       <h6>Capture Moments</h6>
       </div>
     </div>
@@ -147,7 +147,7 @@
     </div> -->
       
     <div id="latest-textbox">
-      <h4>Latest Release</h4>
+      <h4 id="latest-text">Latest Release</h4>
       <p class="latest-intro">Updated works below. 
       <br>
       <!-- Catch precious memories to be remembered
