--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
     <div id="latest-textbox">
       <h4 id="latest-text">Latest Release</h4>
   
-      <p class="latest-intro">Updated works below. 
-      <br>
+      <!-- <p class="latest-intro">Updated works below. 
+      <br> -->
       <!-- Catch precious memories to be remembered
       <br>
       in all of your lifetime. -->
