--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   <div id="me-intro-box col-12">
     <p id="me-intro-p">
     I grew up in Fuzhou, China. After graduating from Hong Kong University of Science and Technology,  
-    I am working in Hong Kong as IT engineer as well as part-time photographer.
+    I am working in Hong Kong as an IT engineer as well as a part-time photographer.
     <br><br>
     Besides photography, I am also keen on Web Development, this website was developed by myself, walking dogs, eating hot-pot, etc.  
     <p>
