--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@
 
 <div id="me" class="row">
   <div id="me-image col-12">
+
   </div>
-  <div id="me-intro-box col-12">
+  <div id="me-intro-box" class="col-12">
     <p id="me-intro-p">
     I grew up in Fuzhou, China. After graduating from Hong Kong University of Science and Technology,  
     I am working in Hong Kong as an IT engineer as well as a part-time photographer.
