--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
 
 <div id="me" class="row">
-  <div id="me-image col-12">
+  <div id="me-image" class="col-12">
 
   </div>
   <div id="me-intro-box" class="col-12">
