--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 <div id="me" class="row">
   <div id="me-image" class="col-12">
-
+  <h4 id="me-title"></h4>
   </div>
   <div id="me-intro-box" class="col-12">
     <p id="me-intro-p">
