--- a/index.html
+++ b/index.html
@@ -182,11 +182,13 @@
 
 <div id="me" class="row">
   <div id="me-image" class="col-12">
-  <h4 id="me-title"></h4>
+  <h4 id="me-title">Me</h4>
   </div>
   <div id="me-intro-box" class="col-12">
     <p id="me-intro-p">
-    I grew up in Fuzhou, China. After graduating from Hong Kong University of Science and Technology,  
+    I grew up in Fuzhou, China. 
+    <br>
+    After graduating from Hong Kong University of Science and Technology,  
     I am working in Hong Kong as an IT engineer as well as a part-time photographer.
     <br><br>
     Besides photography, I am also keen on Web Development, this website was developed by myself, walking dogs, eating hot-pot, etc.  
