--- a/index.html
+++ b/index.html
@@ -181,9 +181,11 @@
 
 
 <div id="me" class="row">
+
   <div id="me-image" class="col-12">
-  <h4 id="me-title">About Me</h4>
+    <h4 id="me-title">About Me</h4>
   </div>
+
   <div id="me-intro-box" class="col-12">
     <p id="me-intro-p">
     I grew up in Fuzhou, China. 
@@ -191,9 +193,10 @@
     After graduating from HKUST,  
     I am working in HK as an IT engineer and a part-time photographer.
     <br><br>
-    Besides photography, I am also keen on Web Development, this website was developed by myself, walking dogs, eating hot-pot, etc.  
+    Besides photography, I am also keen on Web Development, this website was developed by myself, walking dogs, eating spicy hot-pot, etc.  
     <p>
   </div>
+
 </div>
 
 
