adfasdfs d# Plese enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -201,6 +201,28 @@
 
 
 
+<div id="contact">
+  
+  I grew up in Fuzhou, China. 
+    <br>
+    After graduating from HKUST,  
+    I am working in HK as an IT engineer and a part-time photographer.
+    <br><br>
+    Besides photography, I am also keen on Web Development, this website was deveI grew up in Fuzhou, China. 
+    <br>
+    After graduating from HKUST,  
+    I am working in HK as an IT engineer and a part-time photographer.
+    <br><br>
+    Besides photography, I am also keen on Web Development, this website was deveI grew up in Fuzhou, China. 
+    <br>
+    After graduating from HKUST,  
+    I am working in HK as an IT engineer and a part-time photographer.
+    <br><br>
+    Besides photography, I am also keen on Web Development, this website was deve
+</div>
+
+
+
 
 
 </div>
