--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 <div id="contact">
   
-  I grew up in Fuzhou, China. 
+  hihihiI grew up in Fuzhou, China. 
     <br>
     After graduating from HKUST,  
     I am working in HK as an IT engineer and a part-time photographer.
