--- a/index.html
+++ b/index.html
@@ -201,24 +201,17 @@
 
 
 
-<div id="contact">
-  
-  hihihiI grew up in Fuzhou, China. 
-    <br>
-    After graduating from HKUST,  
-    I am working in HK as an IT engineer and a part-time photographer.
-    <br><br>
-    Besides photography, I am also keen on Web Development, this website was deveI grew up in Fuzhou, China. 
-    <br>
-    After graduating from HKUST,  
-    I am working in HK as an IT engineer and a part-time photographer.
-    <br><br>
-    Besides photography, I am also keen on Web Development, this website was deveI grew up in Fuzhou, China. 
-    <br>
-    After graduating from HKUST,  
-    I am working in HK as an IT engineer and a part-time photographer.
-    <br><br>
-    Besides photography, I am also keen on Web Development, this website was deve
+<div id="contact" class="row">
+  <div id="contact-img" class="col-12">
+    
+  </div>
+  <div id="contact-text" class="col-12">
+    <span>Email:<span><span>yaohermione@gmail.com</span> 
+    <span>Mobile Phone:<span><span>+852-6056 9332</span> 
+    <span>Wechat:<span><span>Yao_Hermione</span>
+    <span>Mobile Phone:<span><span>+852-6056 9332</span>
+  </div>
+
 </div>
 
 
