--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     After graduating from HKUST,  
     I am working in HK as an IT engineer and a part-time photographer.
     <br><br>
-    Besides photography, I am also keen on Web Development, this website was developed by myself, walking dogs, eating spicy hot-pot, etc.  
+    Besides photography, I am also keen on web development, walking dogs and eating spicy hot-pot, etc.  
     <p>
   </div>
 
@@ -206,10 +206,14 @@
     
   </div>
   <div id="contact-text" class="col-12">
-    <span>Email:<span><span>yaohermione@gmail.com</span> 
-    <span>Mobile Phone:<span><span>+852-6056 9332</span> 
-    <span>Wechat:<span><span>Yao_Hermione</span>
-    <span>Mobile Phone:<span><span>+852-6056 9332</span>
+    <h4 class="col-12" id="contact-title">Contact</h4>
+    <div id="contact-info">
+    <span class="contact-style">Email:<span><span class="contact-content">yaohermione@gmail.com</span> 
+    <br>
+    <span class="contact-style">Mobile Phone:<span><span class="contact-content">+852-6056 9332</span> 
+    <br>
+    <span class="contact-style">Wechat:<span><span class="contact-content">Yao_Hermione</span>
+    <div>
   </div>
 
 </div>
