--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
   </div>
   <div id="contact-text" class="col-12">
     <h4 class="col-12" id="contact-title">Contact</h4>
-    <div id="contact-info">
+    <div class="col-12" id="contact-info">
     <span class="contact-style">Email:<span><span class="contact-content">yaohermione@gmail.com</span> 
     <br>
     <span class="contact-style">Mobile Phone:<span><span class="contact-content">+852-6056 9332</span> 
     <br>
     <span class="contact-style">Wechat:<span><span class="contact-content">Yao_Hermione</span>
-    <div>
+    </div>
   </div>
 
 </div>
