--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
   <meta charset="utf-8">
+  <meta name="format-detection" content="telephone=no">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Yao WEI Photography</title>
 
@@ -208,11 +209,11 @@
   </div>
  
   <div class="col-12" id="contact-info">
-    <span class="contact-style">Email:<span><span class="contact-content">yaohermione@gmail.com</span> 
+    <span class="contact-style">Email: <span><span class="contact-content">yaohermione@gmail.com</span> 
     <br>
-    <span class="contact-style">Mobile Phone:<span><span class="contact-content">+852-6056 9332</span> 
+    <span class="contact-style">Mobile Phone: <span><span class="contact-content">+852-6056 9332</span> 
     <br>
-    <span class="contact-style">Wechat:<span><span class="contact-content">Yao_Hermione</span>
+    <span class="contact-style">Wechat: <span><span class="contact-content">Yao_Hermione</span>
   </div>
     
 </div>
