--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   </div>
  
   <div class="col-12" id="contact-info">
-    <span class="contact-style">Email: <span><span class="contact-content">yaohermione@gmail.com</span> 
+    <span class="contact-style"><b>Email: <b><span><span class="contact-content">yaohermione@gmail.com</span> 
     <br>
     <span class="contact-style">Mobile Phone: <span><span class="contact-content">+852-6056 9332</span> 
     <br>
