--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
   </div>
  
   <div class="col-12" id="contact-info">
-    <span class="contact-style"><b>Email: </b></span>
-    <span class="contact-content">yaohermione@gmail.com</span> 
+    <p class="contact-style"><b>Email: </b></p>
+    <p class="contact-content">yaohermione@gmail.com</p> 
     <br>
-    <span class="contact-style"><b>Mobile Phone: </b></span>
-    <span class="contact-content">+852-6056 9332</span> 
+    <p class="contact-style"><b>Mobile Phone: </b></p>
+    <p class="contact-content">+852-6056 9332</p> 
     <br>
-    <span class="contact-style"><b>Wechat: </b></span>
-    <span class="contact-content">Yao_Hermione</span>
+    <p class="contact-style"><b>Wechat: </b></p>
+    <p class="contact-content">Yao_Hermione</p>
   </div>
     
 </div>
