--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
   </div>
  
   <div class="col-12" id="contact-info">
-    <span class="contact-style"><b>Email: </b></span>
+    <span class="contact-content"><b>Email: </b></span>
     <span class="contact-content">yaohermione@gmail.com</span> 
     
-    <span class="contact-style"><b>Mobile Phone: </b></span>
+    <span class="contact-content"><b>Mobile Phone: </b></span>
     <span class="contact-content">+852-6056 9332</span> 
    
-    <span class="contact-style"><b>Wechat: </b></span>
+    <span class="contact-content"><b>Wechat: </b></span>
     <span class="contact-content">Yao_Hermione</span>
   </div>
     
