--- a/index.html
+++ b/index.html
@@ -209,14 +209,11 @@
   </div>
  
   <div class="col-12" id="contact-info">
-    <span class="contact-content"><b>Email: </b></span>
-    <span class="contact-content">yaohermione@gmail.com</span> 
+    <span class="contact-content"><b>Email: </b>yaohermione@gmail.com</span> 
     
-    <span class="contact-content"><b>Mobile Phone: </b></span>
-    <span class="contact-content">+852-6056 9332</span> 
+    <span class="contact-content"><b>Mobile Phone: </b>+852-6056 9332</span> 
    
-    <span class="contact-content"><b>Wechat: </b></span>
-    <span class="contact-content">Yao_Hermione</span>
+    <span class="contact-content"><b>Wechat: </b>Yao_Hermione</span>
   </div>
     
 </div>
