--- a/index.html
+++ b/index.html
@@ -208,14 +208,22 @@
     <h4 class="col-12" id="contact-title">Contact</h4>
   </div>
  
-  <div class="col-12" id="contact-info">
-    <span class="contact-content"><b>Email: </b>yaohermione@gmail.com</span> 
+
+  <div id="contact-form">
     
-    <span class="contact-content"><b>Mobile Phone: </b>+852-6056 9332</span> 
-   
+  </div>
+
+
+
+  <div class="col-12" id="contact-info">
+    <span class="contact-content"><b>Email: </b>yaohermione@gmail.com</span><span class="contact-content"><b>Mobile Phone: </b>+852-6056 9332</span>
     <span class="contact-content"><b>Wechat: </b>Yao_Hermione</span>
   </div>
     
+
+
+
+
 </div>
 
 
