--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
 <div id="contact" class="row">
 
   <div id="contact-img" class="col-12">
-    <h4 class="col-12" id="contact-title">Contact</h4>
+    <h4 class="col-12" id="contact-title">Get in touch</h4>
   </div>
  
   <div id="contact-container">
     <div id="contact-form">
-      
+      <span></span>
     </div>
 
 
@@ -235,6 +235,19 @@
 
 <div id="main-gray-layer"><div>
 
+
+
+<div class="footer row">
+
+  <div class="col-6">
+    <p id="copyright">Copyright © developed and designed by YAO WEI</p>
+  </div>
+
+  <div class="col-6">
+    
+  </div>
+  
+</div>
 
 </main>
 
