--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 <div class="footer row">
 
   <div class="col-6">
-    <p id="copyright">Copyright © developed and designed by YAO WEI</p>
+    <p id="copyright">© developed and designed by Yao WEI</p>
   </div>
 
   <div class="col-6">
