--- a/index.html
+++ b/index.html
@@ -228,12 +228,17 @@
 
 <div class="footer row">
 
-  <div class="col-6">
-    <p id="copyright">© developed and designed by Yao WEI</p>
+  <div class="col-12 ">
+    <p id="copyright">Copyright © Developed by Yao WEI</p>
   </div>
 
-  <div class="col-6">
-    
+  <div class="col-12 ">
+    <ul>
+      <li class="zocial-twitter"></li>
+      <li class="zocial-flickr"></li>
+      <li class="zocial-lastfm"></li>
+      <li class="zocial-reddit"></li>
+    </ul>
   </div>
   
 </div>
